# mrdom-agentos-mcp

./: README.md
mrdom-agentos-mcp/: .gitignore  Dockerfile  LICENSE  docker-compose.yml  env.development  env.example  env.production  env.staging  env.test  main.py  pyproject.toml  requirements.txt
mrdom-agentos-mcp/.github/workflows/: ci.yml
mrdom-agentos-mcp/examples/: basic_usage.py
mrdom-agentos-mcp/k8s/: alertmanager.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  prometheusrule.yaml  pvc.yaml  secrets.yaml  service.yaml  servicemonitor.yaml
mrdom-agentos-mcp/monitoring/: prometheus.yml
mrdom-agentos-mcp/monitoring/grafana/dashboards/: README.md  agentos-metrics-dashboard.json  agility-metrics-dashboard.json  availability-metrics-dashboard.json  business-metrics-dashboard.json  compliance-metrics-dashboard.json  cost-metrics-dashboard.json  culture-excellence-dashboard.json  dashboard-provider-complete.yml  dashboard-provider.yml  data-excellence-dashboard.json  digital-business-dashboard.json  digital-transformation-dashboard.json  governance-excellence-dashboard.json  governance-metrics-dashboard.json  innovation-excellence-dashboard.json  innovation-metrics-dashboard.json  integration-metrics-dashboard.json  leadership-excellence-dashboard.json  leadership-metrics-dashboard.json  mrdom-sdr-agentos-complete-dashboard.json  mrdom-sdr-agentos-dashboard.json  operational-excellence-dashboard.json  organizational-culture-dashboard.json  people-excellence-dashboard.json  performance-metrics-dashboard.json  process-excellence-dashboard.json  product-excellence-dashboard.json  quality-metrics-dashboard.json  resilience-metrics-dashboard.json  scalability-metrics-dashboard.json  security-metrics-dashboard.json  service-excellence-dashboard.json  social-responsibility-dashboard.json  social-responsibility-excellence-dashboard.json  sustainability-excellence-dashboard.json  sustainability-metrics-dashboard.json  system-metrics-dashboard.json  tech-innovation-dashboard.json  technology-excellence-dashboard.json  (+2 more)
mrdom-agentos-mcp/scripts/: init-db.sql
mrdom-agentos-mcp/src/mrdom/: __init__.py
mrdom-agentos-mcp/src/mrdom/agents/: __init__.py  bedrock_agent.py
mrdom-agentos-mcp/src/mrdom/api/: __init__.py
mrdom-agentos-mcp/src/mrdom/api/routes/: agents.py  health.py  webhooks.py
mrdom-agentos-mcp/src/mrdom/core/: config.py
mrdom-agentos-mcp/tests/: conftest.py
