[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrdom-agentos-bedrock"
version = "1.0.0"
description = "Sistema de automação de vendas com agentes inteligentes usando AgentOS e AWS Bedrock"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DOM-360", email = "contato@dom360.com.br"},
]
keywords = ["ai", "agents", "bedrock", "sales", "automation", "chatwoot", "n8n"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.114.1",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.10.1",
    "agno>=2.1.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "openai>=1.51.2",
    "httpx>=0.27.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "python-dateutil>=2.9.0.post0",
    "asyncpg>=0.29.0",
    "redis>=5.0.3",
    "structlog>=23.2.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "asgi-correlation-id>=4.2.0",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
]
security = [
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/DOM-360/mrdom-agentos-mcp"
Documentation = "https://github.com/DOM-360/mrdom-agentos-mcp/docs"
Repository = "https://github.com/DOM-360/mrdom-agentos-mcp.git"
Issues = "https://github.com/DOM-360/mrdom-agentos-mcp/issues"

[project.scripts]
mrdom-sdr = "mrdom.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mrdom"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
